@@ -226,10 +226,9 @@ Returns the epoch timestamp representing the passed L<Time::FFI::tm> record
 interpreted in the local time zone. The time is interpreted from the C<tm_sec>,
 C<tm_min>, C<tm_hour>, C<tm_mday>, C<tm_mon>, C<tm_year>, and C<tm_isdst>
 members of the record, ignoring the rest. DST status will be automatically
-determined if C<tm_isdst> is a negative value. The C<tm_isdst>, C<tm_wday>, and
-C<tm_yday> members of the record will also be modified to be consistent with
-the interpreted time, as well as the C<tm_gmtoff> and C<tm_zone> elements if
-supported.
+determined if C<tm_isdst> is a negative value. The record will also be updated
+to normalize any out-of-range values and populate the C<tm_isdst>, C<tm_wday>,
+and C<tm_yday> values, as well as C<tm_gmtoff> and C<tm_zone> if supported.
 
 =head2 strftime
 
