@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Clarify that mktime may adjust any elements of the passed tm record.
 
 1.002     2019-10-10 16:17:27 EDT
   - Added timelocal and timegm functions where available.
